<resources xmlns:android="http://schemas.android.com/apk/res/android">
    <string name="app_name">TinyTasks</string>
    <string name="facebook_application_id">407297503449175</string>
    <string name="fb_login_protocol_scheme">fb407297503449175</string>
    <string name="CONSUMER_KEY">EH1FDWkfphl87dtuvvQp8DeE9</string>
    <string name="CONSUMER_SECRET">BdP0e9kLcjFCqmHEKmbBcbqmcsXYoE5jBYTCnF3xY55RvLJWC5</string>
    <string name="create_task">Create Task</string>
    <string name="mapbox_access_token">pk.eyJ1IjoiaXRzbGFycyIsImEiOiJjandnbTZxMTMwYXBnNDVsYjI0bXFjandvIn0.2XNaPq9t88u43xs_2wJVeg</string>
    <string name="settings">Settings</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="task_preferences">Task Preferences</string>
    <string name="notifications">Notifications</string>
    <string name="log_out">Log Out</string>
    <string name="sign_in">Sign in</string>
    <string name="enter_password">Enter password</string>
    <string name="back_to_home">Back to home</string>
    <string name="task_created">Task created!</string>
    <string name="create_task_3_3">Create Task 3/3</string>
    <string name="add_images_optional">Add image (optional)</string>
    <string name="create_my_task">Create task</string>
    <string name="create_task_1_3">Create Task 1/3</string>
    <string name="task_name">Task name:</string>
    <string name="mowing_the_lawn">Mowing the lawn</string>
    <string name="next_page">Next page</string>
    <string name="category">Category</string>
    <string name="create_task_2_3">Create Task 2/3</string>
    <string name="task_price">Task price:</string>
    <string name="estimated_amount_of_work_hours">Estimated amount of work (hours):</string>
    <string name="hours">Hours</string>
    <string name="task_location">Task location:</string>
    <string name="select_location_on_map">Select location on map</string>
    <string name="cute_dino">cute_dino</string>
    <string name="waiting_for_a_connection">Waiting for a connection ...</string>
    <string name="this_app_requires_an_internet_connection">This app requires an internet connection.</string>
    <string name="no_internet_connection">No internet connection :(</string>
    <string name="sad_background_for_dino">sad_background_for_dino</string>
    <string name="view_profile">View profile</string>
    <string name="sign_in_up">Sign in/up</string>
    <string name="get_location">Get location</string>
    <string name="place_picker">Place picker</string>
    <string name="app_home">app home</string>
    <string name="sign_out">Sign out</string>
    <string name="location">Location</string>
    <string name="select_location">Select location</string>
    <string name="confirm_location">Confirm: {location}</string>
    <string name="welcome_to_tiny_tasks">Welcome to Tiny Tasks!</string>
    <string name="or_sign_in_with">Or sign in with</string>
    <string name="email">Email</string>
    <string name="welcome">Welcome,</string>
    <string name="back">Back</string>
    <string name="my_profile">My profile</string>
    <string name="signed_in">Signed in</string>
    <string name="sign_up">Sign up</string>
    <string name="date_of_birth_dd_mm_yyyy">Date of birth (dd-mm-yyyy)</string>
    <string name="phone_number">Phone number</string>
    <string name="full_name">Full name</string>
    <string name="gender_m_f_u">Gender (M/F/U)</string>
    <string name="last_name">Last name</string>
    <string name="first_name">First name</string>
    <string name="home">Home</string>
    <string name="navigate_your_recommended_tiny_tasks">Navigate your recommended tiny tasks.</string>
    <string name="categories">Categories</string>
    <string name="search">Search</string>
    <string name="demo">Demo</string>
    <string name="add_image">add image</string>
    <string name="Choose_location_for_task">choose location for task</string>
    <string name="recommended_tasks">Recommended tasks</string>
    <string name="task_desecription">Task desecription:</string>
    <string name="please_help_me_and_mow_my_lawn_nit_is_30_m_2_thank_you">Please help me, and mow my lawn!  It is 30 m^2, thank you!</string>
    <string name="you_need_to_sign_in_to_view_your_profile">You need to sign in to view your profile.</string>
    <string name="phone_number_phone_number">Phone number: {PHONE NUMBER}</string>
    <string name="email_email">Email: {EMAIL}</string>
    <string name="gender_gender">Gender: {GENDER}</string>
    <string name="birth_date_birth_date">Birth date: {BIRTH DATE}</string>
    <string name="your_profile">Your profile</string>
    <string name="search_tasks">Search tasks</string>
    <string name="tutoring">Tutoring</string>
    <string name="repairing">Repairing</string>
    <string name="plumbing">Plumbing</string>
    <string name="painting">Painting</string>
    <string name="householding">Householding</string>
    <string name="groceries_shopping">Groceries Shopping</string>
    <string name="gardening">Gardening</string>
    <string name="cooking">Cooking</string>
    <string name="cleaning">Cleaning</string>
    <string name="carpenting">Carpenting</string>
    <string name="brick_laying">Brick laying</string>
    <string name="which_types_of_task_do_you_want_to_see">Which types of task do you want to see?</string>
    <string name="task_npreferences">Task Preferences</string>
    <string name="other">Other</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="google">Google</string>
    <string name="confirm_password">Confirm password</string>
    <string name="profileimg">Profile Image</string>
    <string name="another_users_profile">User Profile</string>
    <string name="copy_number">Copy Phonenumber</string>
    <string name="task_npreferencesT">Task  Preferences</string>
    <string name="my_tasks">My tasks</string>
    <string name="locationL">{LOCATION}</string>
    <string name="time_hr_s">{TIME} hr(s)</string>
    <string name="estimated_time_of_task">Estimated time of task</string>
    <string name="price">€ {PRICE}</string>
    <string name="priceP">Price</string>
    <string name="task_title">{TASK TITLE}</string>
    <string name="categoryC">{CATEGORY}</string>
    <string name="task_description">{TASK DESCRIPTION}</string>
    <string name="apply_to_this_task">Apply to this task</string>
    <string name="task_descriptionD">Task description</string>
    <string name="task_image">task_image</string>
    <string name="copy_email">Copy Email</string>
    <string name="to">to</string>
    <string name="eur">€</string>
    <string name="up_to">Up to</string>
    <string name="distance">Distance</string>
    <string name="you_can_now_view_your_task_on_your_profile">You can now view your task on your profile</string>
    <string name="hr_s">hr(s)</string>
    <string name="from">From</string>
    <string name="km">km</string>
    <string name="amount_of_work">Amount of work</string>
    <string name="search_by">Search by</string>
    <string name="view_my_tasks">View my tasks</string>

    <string-array name="task_price_types">
        <item>Enter price</item>
        <item>To be determined</item>
    </string-array>

    <string-array name="search_ordering">
        <item>Ascending</item>
        <item>Descending</item>
    </string-array>

    <string-array name="search_type">
        <item>Price</item>
        <item>Work amount</item>
        <item>Distance</item>
    </string-array>
</resources>