<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundblur">
    <!--android:background="#FFFFFF">-->

        <TextView
            android:id="@+id/another_users_profile_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="32dp"

            android:fontFamily="@font/roboto"
            android:text="@string/another_users_profile"
            android:textAllCaps="false"
            android:textColor="@color/common_google_signin_btn_text_dark_focused"

            android:textSize="40sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/A_profile_image"
            android:layout_width="102dp"
            android:layout_height="102dp"

            android:layout_marginTop="30dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:contentDescription="@string/profileimg"
            android:src="@drawable/ic_person_black_24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/another_users_profile_text_view" />

        <TextView
            android:id="@+id/A_name_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="8dp"

            android:fontFamily="@font/roboto"
            android:text="@string/full_name"
            android:textAllCaps="false"
            android:textColor="#000"
            android:textSize="28sp"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/another_users_profile_text_view" />

        <TextView
            android:id="@+id/A_birthdate_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"

            android:fontFamily="@font/roboto"
            android:text="@string/birth_date_birth_date"
            android:textAllCaps="false"
            android:textColor="#000"
            android:textSize="15sp"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/A_name_text_view" />

        <TextView
            android:id="@+id/A_gender_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/roboto"
            android:text="@string/gender_gender"

            android:textAllCaps="false"
            android:textColor="#000"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/A_phone_number_text_view" />

        <TextView
            android:id="@+id/A_email_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"

            android:fontFamily="@font/roboto"
            android:text="@string/email_email"
            android:textAllCaps="false"
            android:textColor="#000"
            android:textSize="15sp"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/A_birthdate_text_view" />

        <TextView
            android:id="@+id/A_phone_number_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"

            android:fontFamily="@font/roboto"
            android:text="@string/phone_number_phone_number"
            android:textAllCaps="false"
            android:textColor="#000"
            android:textSize="15sp"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/A_email_text_view" />

    <Button
        android:id="@+id/task_next_page_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginLeft="27dp"
        android:layout_marginRight="27dp"
        android:layout_marginBottom="74dp"

        android:background="@drawable/button_custom"
        android:text="@string/copy_number"
        android:textAllCaps="false"
        android:textColor="#fff"
        android:textSize="20sp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>