<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/backgroundblur">


    <TextView
        android:id="@+id/task_title"
        android:layout_width="match_parent"
        android:layout_height="80dp"

        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"


        android:text="@string/task_title"
        android:fontFamily="@font/roboto"
        android:textColor="#000000"
        android:textStyle="bold"
        android:textSize="30sp"
        app:autoSizeTextType="uniform"
        app:autoSizeMinTextSize="10sp"
        app:autoSizeMaxTextSize="60sp"
        app:autoSizeStepGranularity="2sp"

        app:fontFamily="@font/roboto"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>



    <TextView
        android:id="@+id/taskdescription1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"

        android:fontFamily="@font/roboto"
        android:text="@string/task_descriptionD"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textStyle="bold"

        android:textSize="15sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/task_title"
        android:layout_marginStart="20dp" />

    <TextView
        android:id="@+id/task_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:maxHeight="130dp"

        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="0dp"

        android:fontFamily="@font/roboto"
        android:text="@string/task_description"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textSize="22sp"
        app:autoSizeTextType="uniform"
        app:autoSizeMinTextSize="10sp"
        app:autoSizeMaxTextSize="30sp"
        app:autoSizeStepGranularity="2sp"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/taskdescription1"/>

    <TextView
        android:id="@+id/taskcategory1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"

        android:fontFamily="@font/roboto"
        android:text="@string/category"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textStyle="bold"

        android:textSize="15sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/task_description"
        android:layout_marginStart="20dp" />

    <TextView
        android:id="@+id/taskcategory2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"

        android:fontFamily="@font/roboto"
        android:text="@string/categoryC"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"

        android:textSize="15sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/taskcategory1"
        android:layout_marginStart="20dp" />

    <TextView
        android:id="@+id/taskprice1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"


        android:layout_marginTop="20dp"
        android:layout_marginLeft="90dp"

        android:fontFamily="@font/roboto"
        android:text="@string/priceP"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textStyle="bold"

        android:textSize="15sp"
        app:layout_constraintLeft_toRightOf="@id/taskcategory1"
        app:layout_constraintTop_toBottomOf="@+id/task_description"
        android:layout_marginStart="90dp" />

    <TextView
        android:id="@+id/taskprice2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="10dp"

        android:fontFamily="@font/roboto"
        android:text="@string/price"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textSize="15sp"
        app:layout_constraintLeft_toLeftOf="@id/taskprice1"
        app:layout_constraintTop_toBottomOf="@+id/taskprice1"
        />

    <TextView
        android:id="@+id/tasktime1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"


        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"

        android:fontFamily="@font/roboto"
        android:text="@string/estimated_time_of_task"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textStyle="bold"

        android:textSize="15sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/taskcategory2" />

    <TextView
        android:id="@+id/tasktime2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="10dp"

        android:fontFamily="@font/roboto"
        android:text="@string/time_hr_s"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textSize="15sp"
        app:layout_constraintLeft_toLeftOf="@id/tasktime1"
        app:layout_constraintTop_toBottomOf="@+id/tasktime1"
        />

    <TextView
        android:id="@+id/tasklocation1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"

        android:fontFamily="@font/roboto"
        android:text="@string/location"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textStyle="bold"

        android:textSize="15sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tasktime2"
        android:layout_marginStart="20dp" />

    <TextView
        android:id="@+id/tasklocation2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"

        android:fontFamily="@font/roboto"
        android:text="@string/locationL"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"

        android:textSize="15sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tasklocation1"/>


    <ImageView
        android:id="@+id/task_image"
        android:layout_width="0dp"
        android:layout_height="0dp"

        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"

        android:contentDescription="@string/task_image"

        android:src="@drawable/app_logo"
        app:layout_constraintBottom_toTopOf="@+id/react_to_task_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"

        app:layout_constraintTop_toBottomOf="@+id/tasklocation2" />

    <Button
        android:id="@+id/delete_task_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginStart="27dp"
        android:layout_marginLeft="27dp"
        android:layout_marginEnd="27dp"
        android:layout_marginRight="27dp"
        android:layout_marginBottom="10dp"

        android:background="@drawable/button_custom_red"
        android:text="Delete this task"
        android:textAllCaps="false"
        android:textColor="#fff"
        android:textSize="20sp"

        app:layout_constraintBottom_toTopOf="@+id/back_button"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/back_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginStart="27dp"
        android:layout_marginLeft="27dp"
        android:layout_marginEnd="27dp"
        android:layout_marginRight="27dp"
        android:layout_marginBottom="10dp"

        android:background="@drawable/button_custom"
        android:text="Back"
        android:textAllCaps="false"
        android:textColor="#fff"
        android:textSize="20sp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

</android.support.constraint.ConstraintLayout>