<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundblur">
    
    <!--android:background="#E8FEFF"-->
    <!--android:background="@drawable/background_test8">-->
    <!--android:background="#FFFFFF">-->

    <TextView
        android:id="@+id/create_task_text_p1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="32dp"

        android:text="@string/create_task_1_3"
        android:fontFamily="@font/roboto"
        android:textColor="#000000"
        android:textSize="40sp"
        android:textStyle="bold"

        app:fontFamily="@font/roboto"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/task_name_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginLeft="20dp"
        android:layout_marginTop="32dp"

        android:fontFamily="@font/roboto"
        android:text="@string/task_name"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"

        android:textSize="15sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create_task_text_p1"
        android:layout_marginStart="20dp" />

    <EditText
        android:id="@+id/task_name_edittext"
        android:layout_width="match_parent"
        android:layout_height="80dp"

        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"

        android:gravity="start|top"
        android:padding="10dp"
        android:background="@drawable/edittext_custom"
        android:hint="@string/mowing_the_lawn"
        android:inputType="textMultiLine"

        app:layout_constraintTop_toBottomOf="@+id/task_name_text"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/task_description_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginLeft="20dp"
        android:layout_marginTop="28dp"

        android:fontFamily="@font/roboto"
        android:text="@string/task_desecription"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"

        android:textSize="15sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/task_name_edittext"
        android:layout_marginStart="20dp" />

    <EditText
        android:id="@+id/task_description_edittext"
        android:layout_width="match_parent"
        android:layout_height="150dp"

        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"

        android:gravity="start|top"
        android:padding="10dp"
        android:background="@drawable/edittext_custom"
        android:hint="@string/please_help_me_and_mow_my_lawn_nit_is_30_m_2_thank_you"
        android:inputType="textMultiLine"

        app:layout_constraintTop_toBottomOf="@+id/task_description_text"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/create_task_choose_category_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"

        android:fontFamily="@font/roboto"
        android:text="@string/category"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"

        android:textSize="15sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/task_description_edittext"
        android:layout_marginStart="20dp" />

    <Spinner
        android:id="@+id/categories_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"

        android:layout_marginTop="10dp"

        android:padding="10dp"
        app:layout_constraintLeft_toRightOf="@+id/create_task_choose_category_text"
        app:layout_constraintTop_toBottomOf="@+id/task_description_edittext" />

    <Button
        android:id="@+id/task_next_page_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginLeft="27dp"
        android:layout_marginRight="27dp"
        android:layout_marginBottom="74dp"

        android:background="@drawable/button_custom"
        android:text="@string/next_page"
        android:textAllCaps="false"
        android:textColor="#fff"
        android:textSize="20sp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>