<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundblur">
    <!--android:background="#fff">-->

    <TextView
        android:id="@+id/create_task_text_p3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="32dp"

        android:text="@string/create_task_3_3"
        android:fontFamily="@font/roboto"
        android:textColor="#000000"
        android:textSize="40sp"
        android:textStyle="bold"

        app:fontFamily="@font/roboto"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/add_images_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginLeft="20dp"
        android:layout_marginTop="32dp"

        android:fontFamily="@font/roboto"
        android:text="@string/add_images_optional"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"

        android:textSize="15sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create_task_text_p3"
        android:layout_marginStart="20dp" />

    <ImageButton
        android:id="@+id/add_image_1"
        android:layout_width="match_parent"
        android:layout_height="0dp"

        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"

        android:background="#11ffffff"
        android:contentDescription="@string/add_image"

        android:maxWidth="300dp"

        android:maxHeight="300dp"
        android:src="@drawable/ic_add_to_photos_blue_24dp"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/create_task_button"
        app:layout_constraintTop_toBottomOf="@+id/add_images_text" />

    <Button
        android:id="@+id/create_task_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginStart="27dp"
        android:layout_marginLeft="27dp"
        android:layout_marginEnd="27dp"
        android:layout_marginRight="27dp"
        android:layout_marginBottom="74dp"

        android:background="@drawable/button_custom"
        android:linksClickable="false"
        android:textAllCaps="false"
        android:text="@string/create_my_task"
        android:textSize="20sp"
        android:textColor="#fff"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>